# RustGraph

./: Cargo.toml  config.toml  readme.md
model/: suzanne.glb
src/: config.rs  loader.rs  main.rs  rasterizer.rs  scene.rs  shader.rs  texture.rs  triangle.rs
