[package]
name = "RustGraph"
version = "0.1.0"
edition = "2024"

[dependencies]
bitflags = "2.11.0"
env_logger = "0.11.9"
glfw = "0.61.0"
gltf = "1.4.1"
image = "0.25.9"
log = "0.4.29"
nalgebra = "0.34.1"
pollster = "0.4.0"
serde = { version = "1.0.228", features = ["derive"] }
softbuffer = "0.4.8"
toml = "1.0.3"
wgpu = "27.0.1"
winit = "0.30.12"
